--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 bytemuck = { version = "1.13.1", features = ["derive"] }
+env_logger = "0.10.0"
 glam = "0.24.0"
+log = "0.4.19"
 smol = "1.3.0"
 wgpu = "*"
 winit = "0.28.6"
